modified:   README 	new file:   fixme-discord-translator-webhook-creator/bot.py

--- a/README
+++ b/README
@@ -1,1 +1,16 @@
+# Miscellaneous Creations
 
+This repository contains various projects that I have created, which have not yet been categorized or will not be categorized in the future. 
+
+## Projects
+
+- **sito-prs**: A web application that generates random quotes from famous people.
+- **discord-translator-webhook-creator**: Bot to auto translate in other languages your own languages, but need fixing.
+
+## Contributing
+
+If you would like to contribute to this repository, feel free to fork it and submit a pull request. However, please note that I may not accept all contributions if they do not fit the purpose of this repository.
+
+## Permissions
+
+You don't have permission to use this code in any way without my permission.
